# QGIS-MCP

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
qgis_mcp_hardened/: qgis_mcp_plugin.py
qgis_mcp_plugin/: metadata.txt  qgis_mcp_plugin.py
src/qgis_mcp/: qgis_mcp_client.py  qgis_mcp_server.py
