[project]
name = "qgis-mcp"
version = "1.1.0"
description = "Hardened QGIS-to-MCP bridge: lets an LLM drive QGIS, with token auth and loopback-only binding."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "mcp[cli]>=1.3.0",
    "fastmcp>=2.0.0",
    "ollama>=0.4.0",
]
